fully working prototype, need to make it so that the correct image loads on start

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,15 @@
 	max-width: 950px;
 }
 
-.pageBody {
-	margin-top: 100px;
+.page-body {
+	margin-top: 80px;
 }
 
 .padded-text {
 	padding-left: 20px;
 	padding-right: 20px;
+}
+
+.thumb {
+    margin-bottom: 30px;
 }
