--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,18 @@
 .thumb {
     margin-bottom: 30px;
 }
+
+.gallery-box {
+    -moz-column-count: 4;
+    -moz-column-gap: 10px;
+    -webkit-column-count: 4;
+    -webkit-column-gap: 10px;
+    column-count: 4;
+    column-gap: 10px;
+}
+
+.gallery-cell div {
+    display: inline-block;
+    width: 100%;
+    background-color: red;
+}​
